<resources>
    <string name="app_name">CS3270FinalProject Maddy</string>
    <string name="enter_food_intake">Enter Food Intake</string>
    <string name="enter_exercise">Enter Exercise</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="fitness_journal">Fitness Journal</string>
    <string name="grams_of_carbs">Grams of Carbs:</string>
    <string name="grams_of_protein">Grams of Protein:</string>
    <string name="list">list</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="number_of_calories">Number of Calories:</string>
    <string name="grams_of_fat">Grams of Fat:</string>
    <string name="save">save</string>
    <string name="action_settings">settings</string>
    <string name="biceps_and_back">Biceps and Back</string>
    <string name="triceps_and_chest">Triceps and Chest</string>
    <string name="abs_core">Abs/Core</string>
    <string name="legs">Legs</string>
    <string name="enter_your_weight">Enter Your Weight:</string>
    <string name="bicep_curls">Curls</string>
    <string name="pullups">Pull Ups</string>
    <string name="chinups">Chinups</string>
    <string name="crunches">Crunches</string>
    <string name="leg_raises">Leg Raises</string>
    <string name="bicycles">Bicycles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="dips">Dips</string>
    <string name="pushups">Pushups</string>
    <string name="lunges">Lunges</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="squat_thrusts">Squat Thrusts</string>
    <string name="empty">""</string>
    <string name="food_intake_progress">Food Intake Progress</string>
    <string name="difference_in_calories">Difference in Calories:</string>
    <string name="difference_in_protein">Difference in Protein:</string>
    <string name="difference_in_carbs">Difference in Carbs:</string>
    <string name="difference_in_fat">Difference in Fat:</string>
    <string name="done">Done</string>
    <string name="grams">g</string>
    <string name="lbs">lbs</string>
    <string name="difference_in_curls">Difference in Curls:</string>
    <string name="biceps_and_back_progress">Biceps and Back Progress</string>
    <string name="difference_in_pullups">Difference in Pullups:</string>
    <string name="difference_in_chinups">Difference in Chinups:</string>
    <string name="triceps_and_chest_progress">Triceps and Chest Progress</string>
    <string name="difference_in_pushups">Difference in Pushups:</string>
    <string name="difference_in_dips">Difference in Dips:</string>
    <string name="difference_in_shoulder_presses">Difference in Shoulder Presses:</string>
    <string name="abs_progress">Abs Progress</string>
    <string name="difference_in_crunches">Difference in Crunches:</string>
    <string name="difference_in_leg_raises">Difference in Leg Raises:</string>
    <string name="difference_in_bicycles">Difference in Bicycles:</string>
    <string name="difference_in_squat_thrusts">Difference in Squat Thrusts:</string>
    <string name="difference_in_calf_raises">Difference in Calf Raises:</string>
    <string name="difference_in_lunges">Difference in Lunges:</string>
    <string name="legs_progress">Legs Progress</string>
    <string name="difference_in_weight">Difference in Weight:</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="weight_title">Weight</string>
</resources>
