<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvFoodProgressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_intake_progress"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvCaloriesProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/difference_in_calories"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvProteinProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/difference_in_protein"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvCarbsProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/difference_in_carbs"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvFatProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/difference_in_fat"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnFoodProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>