<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".WeightFragment">

    <TextView
        android:id="@+id/tvWeightProgressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_progress"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>


    <TextView
        android:id="@+id/tvWeightProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/difference_in_weight"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnWeightProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>