<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".25"
        android:text="@string/fitness_journal"
        android:textAlignment="center"
        android:textSize="20sp"

        android:textStyle="bold"
        tools:fontFamily="@font/architects_daughter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnFoodIntake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/enter_food_intake"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:src="@drawable/food"/>

        <ImageButton
            android:id="@+id/btnExercise"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/enter_exercise"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:src="@drawable/exercise" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_weight"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:src="@drawable/weight"/>


    </LinearLayout>

</LinearLayout>