<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LegsFragment"
    android:id="@+id/fragment_legs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunges"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etLunges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calf_raises"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etCalfRaises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squat_thrusts"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etSquatThrusts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

</ScrollView>