<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BicepsAndBackFragment"
    android:id="@+id/fragment_biceps_and_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bicep_curls"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etBicepCurls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pullups"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPullups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chinups"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etChinups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>


</ScrollView>