<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TricepsAndChestFragment"
    android:id="@+id/fragment_triceps_and_chest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pushups"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPushups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dips"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etDips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoulder_press"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etShoulderPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

</ScrollView>