<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/exerciseAppbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/exerciseToolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/fragment_exercise"
        tools:context=".ExerciseFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBicepsAndBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:text="@string/biceps_and_back"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnTricepsAndChest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:text="@string/triceps_and_chest"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAbs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:text="@string/abs_core"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLegs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:text="@string/legs"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>